# yolov8-tflite-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
models/: yolov8n_int8.tflite
src/: utils.cpp  utils.h  yolov8.cpp  yolov8.h
